css/styles.css
/*Header style*/
body {
  font-family: Ubuntu, Oxygen;
}

.header {
    background: #dac3b3;
    display: flex;
    font-size: 25px;
    gap: 20px;
}

h1{
  font-size: inherit;
  min-width: 206px;
}

.links,
.logo{
  display: flex;
  align-items: center;
  gap: 25px;
}

.links{
  margin-left: auto;
  padding-right: 166px;
}

.logo{
  padding-left: 166px;
}

a{
  text-decoration: none;
}

.textrecipes{
  color: black;
}

.textabout{
 color: #696969;
}

.textblog{
  color: white;
}

/*Content style*/
/*Text on the left*/

.contentcontainer{
  display: flex;
  margin: 0 166px;
  margin-top: 30px;
  gap: 40px;
  font-size: 20px;
}

.textcontainer{
  flex: 1 1 0;
  width: 0;
  min-width: 545px;
  text-decoration: none;
}

.photoscontainer{
  flex: 1 1 0;
  width: 0;
  flex-direction: column;
  justify-content: center;
}

h2{
  font-size: 25px;
  min-width: 373px;
}

#firstbutton,
#secondbutton{
border-radius: 20px;
width: 175px;
height: 39px; 
border-style: solid;
font-size: 20px;
font-family: Ubuntu, Oxygen;

}
#firstbutton{
  border-color: #20232a;
  background: #20232a;
  color: #fff;
}

#secondbutton{
  border-color: #dac3b3;
  background: #dac3b3;
  color: #000;
}

a,h1,
h2{
  display: flex;
  justify-content: center;
}

/*photos on right*/

.photosection{
  display: flex;
 justify-content: center;
  gap: 10px;
  margin-bottom: 10px;
}

#generalbutton{
  border-color: #000;
  border-width: 1px;
  background: #fff;
  color: #000;
  border-radius: 20px;
  width: 135px;
  height: 24px; 
  border-style: solid;
  font-family: Ubuntu, Oxygen;
  margin-top: 5px;
}

.squarecontainer{
  display: flex;
  flex-direction: column;
  align-items: center;
}

